prevent horizontal scroll

--- a/assets/styles/components.css
+++ b/assets/styles/components.css
@@ -64,8 +64,6 @@
 
 #header {
     min-height: 100vh;
-    height: auto;
-    position: absolute;
     width: 100vw;
 
     #header-container {
