--- a/assets/styles/reset.css
+++ b/assets/styles/reset.css
@@ -16,7 +16,8 @@ html {
 html,
 body {
     overflow-x: hidden !important;
-    height: 100%;
+    height: 100vh;
+    max-width: 100vw;
 }
 
 /* Remove default padding and margin */
@@ -45,12 +46,9 @@ hr {
 
 /* Set core body defaults */
 body {
-    min-height: 100vh;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     line-height: 1.5;
-    display: flex;
-    flex-direction: column;
 }
 
 /* Improve readability for visually impaired users */
